[package]
name = "windancer"
version = "0.1.0"
authors = ["cnglen <cnglen@gmail.com>"]
edition = "2024"
description = "An org-mode toolkit, including parser, renderer."
homepage = "https://github.com/cnglen/windancer"
repository = "https://github.com/cnglen/windancer"
license = "GPL-3.0"
keywords = ["org-mode", "parse", "render"]
categories = ["parser-implementations", "parsing", "text-processing"]
readme = "README.md"
exclude = ["readme_cn.org"]



[dependencies]
phf = { version = "0.13.1", features = ["macros"]}
chumsky = {version="0.11.1"}

colored = "3.0.0"
orgize = "=0.10.0-alpha.10"
rowan = "0.16.1"
thiserror = "2.0.17"
clap = { version = "4.5.50", features = ["derive"] }

