[package]
name = "windancer"
version = "0.1.3"
authors = ["cnglen <cnglen@gmail.com>"]
edition = "2024"
description = "An org-mode toolkit, including parser, renderer."
homepage = "https://github.com/cnglen/windancer"
repository = "https://github.com/cnglen/windancer"
license = "GPL-3.0"
keywords = ["org-mode", "parse", "render"]
categories = ["parser-implementations", "parsing", "text-processing"]
readme = "README.md"
exclude = ["readme_cn.org"]



[dependencies]
phf = { version = "0.13.1", features = ["macros"]}
chumsky = { version = "0.12.0", features = [] }

colored = "3.0.0"
orgize = "=0.10.0-alpha.10"
rowan = "0.16.1"
thiserror = "2.0.17"
clap = { version = "4.5.50", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }

[dev-dependencies]
criterion = "0.8.0"
pretty_assertions = "1.4.1"

# sudo sysctl kernel.perf_event_paranoid=1
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false

[profile.bench]
debug = true

[[bench]]
name = "doc_parse"              # filename: benches/doc_parse.rs
harness = false

