[package]
name = "windancer"
version = "0.1.3"
edition = "2024"
authors = ["cnglen <cnglen@gmail.com>"]
description = "An org-mode toolkit, including parser, renderer."
homepage = "https://github.com/cnglen/windancer"
repository = "https://github.com/cnglen/windancer"
license = "GPL-3.0"
keywords = ["org-mode", "parse", "render"]
categories = ["parser-implementations", "parsing", "text-processing"]
readme = "README.md"
exclude = ["readme_cn.org"]

[[bin]]
name = "kite"  # to rename

[[bench]]
harness = false
name = "doc_parse"  # filename: benches/doc_parse.rs

[dependencies]
blake3 = "1.8.3"
chrono = { version = "0.4.42", features = ["serde"] }
chumsky = { version = "0.13.0", features = [] }
clap = { version = "4.5.50", features = ["derive"] }
clap_complete = "4.5.65"
colored = "3.0.0"
fs_extra = "1.3.0"
html-escape = "0.2.13"
orgize = "=0.10.0-alpha.10"
petgraph = "0.8.3"
phf = { version = "0.13.1", features = ["macros"] }
rowan = "0.16.1"
serde = { version="1.0.228", features = ["derive"] }
tera = "1.20.1"
thiserror = "2.0.17"
tidier = "0.5.5"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
walkdir = "2.5.0"

[dev-dependencies]
criterion = "0.8.0"
pretty_assertions = "1.4.1"

[patch.crates-io]
chumsky = { git = "https://github.com/cnglen/chumsky.git" }

[profile.bench]
debug = true  # sudo sysctl kernel.perf_event_paranoid=1

[profile.release]
opt-level = 3
debug = false
lto = "fat"
codegen-units = 1
